nextcloud/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  strategy:
    type: Recreate
  template:
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:21.0.2-apache
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: nextcloud.jern.me
          initialDelaySeconds: 30
          timeoutSeconds: 10
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /status.php
            port: http
            httpHeaders:
            - name: Host
              value: nextcloud.jern.me
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 5
        resources:
          requests:
            cpu: 50m
            memory: 300Mi
        volumeMounts:
        - name: nextcloud-data
          mountPath: /var/www/html/
          subPath: root
        - name: nextcloud-data
          mountPath: /var/www/html/data
          subPath: data
        - name: nextcloud-data
          mountPath: /var/www/html/config
          subPath: config
        - name: nextcloud-data
          mountPath: /var/www/html/custom_apps
          subPath: custom_apps
        - name: nextcloud-data
          mountPath: /var/www/html/themes
          subPath: themes
      volumes:
      - name: nextcloud-data
        persistentVolumeClaim:
          claimName: nextcloud-data
